# mcpp_hw

./: a.out  input_params.cpp
hw2/homework_2/task_1/: CMakeLists.txt
hw2/homework_2/task_1/include/: random_gen.hpp
hw2/homework_2/task_1/src/: main.cpp  random_gen.cpp
hw2/homework_2/task_2/src/: main.cpp
hw_1/task_2/: CMakeLists.txt  build.sh
